--- a/Clase-12/grid.html
+++ b/Clase-12/grid.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class="bg-dark text-white text-center">
-    <h1>Grillas</h1>
+    <h1>Grillas geniales</h1>
     <div class="container text-center">
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
