Mensaje super real en el footer

--- a/Clase-12/index.html
+++ b/Clase-12/index.html
@@ -274,9 +274,7 @@
     </section>
 
     <footer>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum aspernatur eum cupiditate ipsa voluptatibus
-        veritatis quia cumque corrupti. Repudiandae sunt est expedita eaque maxime doloribus recusandae minima magni
-        iusto perferendis.
+        Todos los derechos reservados RC School
     </footer>
 
     <!-- Modal -->
