--- a/Clase-12/index.html
+++ b/Clase-12/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <nav class="navbar bg-light navbar-expand-lg">
+        <nav class="navbar bg-danger navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <img src="images/logo.png" alt="Butger Tasty Logo" class="img-fluid img-brand">
