--- a/cajas/index.html
+++ b/cajas/index.html
@@ -7,18 +7,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- https://imgs.search.brave.com/qyHd_Pgnvlx_HurTRwxRNdF6xS0aUlwm2Izty0gtnkw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9ldy5j/b20vdGhtYi9UeHhF/Mk02TFN4QmlLN1JI/Y2ZzV0NWZlY2OUU9/LzE1MDB4MC9maWx0/ZXJzOm5vX3Vwc2Nh/bGUoKTptYXhfYnl0/ZXMoMTUwMDAwKTpz/dHJpcF9pY2MoKS9y/YW1fNzIzNzgzMjg3/ODM5MjMyLTIwMDAt/Mzk0NTlhZTk1ZDIx/NDZlMmJjMGY5NWIw/ZDczMjNiOTIuanBn -->
 
 <body>
 
-    <div class="caja-1">
-        Plan basico
-    </div>
-    <div class="caja-2">
-        Plan premium
-    </div>
-    <div class="caja-3">
-        plan ultra
-    </div>
+    <main class="main">
+        <img class="rick-image"
+            src="https://imgs.search.brave.com/qyHd_Pgnvlx_HurTRwxRNdF6xS0aUlwm2Izty0gtnkw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9ldy5j/b20vdGhtYi9UeHhF/Mk02TFN4QmlLN1JI/Y2ZzV0NWZlY2OUU9/LzE1MDB4MC9maWx0/ZXJzOm5vX3Vwc2Nh/bGUoKTptYXhfYnl0/ZXMoMTUwMDAwKTpz/dHJpcF9pY2MoKS9y/YW1fNzIzNzgzMjg3/ODM5MjMyLTIwMDAt/Mzk0NTlhZTk1ZDIx/NDZlMmJjMGY5NWIw/ZDczMjNiOTIuanBn" />
+        <p>Lorem ipsum dolor, sit amet consectetur</p>
+        <p>Lorem ipsum dolor, sit amet consectetur</p>
+    </main>
+    <section class="section section-1"></section>
+    <section class="section section-2"></section>
+    <section class="section section-3"></section>
 
 </body>
 
