--- a/Clase-12/index.html
+++ b/Clase-12/index.html
@@ -270,6 +270,8 @@
         </form>
     </section>
 
+    <button onclick="alert('Hola rolling')" class="bg-success">Saludar</button>
+
     <footer>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum aspernatur eum cupiditate ipsa voluptatibus
         veritatis quia cumque corrupti. Repudiandae sunt est expedita eaque maxime doloribus recusandae minima magni
