--- a/clase-23/while.html
+++ b/clase-23/while.html
@@ -10,8 +10,10 @@
 </head>
 
 <body class="bg-dark text-white container py-5">
-    <script src="./js/while-1-b.js"></script>
+    <!-- <script src="./js/while-1-b.js"></script> -->
     <!-- <script src="./js/do-while-1.js"></script> -->
+    <!-- <script src="./js/while-2.js"></script> -->
+    <script src="./js/while-3.js"></script>
 </body>
 
 </html>
